--- a/_config.yaml
+++ b/_config.yaml
@@ -2,3 +2,4 @@ name: "CS498rk: Art and Science of Web Programming, Spring 2015"
 markdown: redcarpet
 baseurl: /sp2015
 highlighter: pygments
+permalink: "/:title"
