--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 name: "CS498rk: Art and Science of Web Programming, Spring 2016"
-markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["tables", "strikethrough"]
 baseurl: /sp2016
