pygments to rouge

--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ markdown: kramdown
 redcarpet:
   extensions: ["tables", "strikethrough"]
 baseurl: /fa2016
-highlighter: pygments
+highlighter: rouge
 permalink: "/:title"
